--- a/src/_btn.scss
+++ b/src/_btn.scss
@@ -1,4 +1,4 @@
-.lm-btn {
+.btn {
   padding: 10px 20px;
   margin-bottom: 20px;
   border: none;
@@ -54,7 +54,7 @@
 }
 
 .dark {
-  .lm-btn {
+  .btn {
     &:hover {
       box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.6), 0 2px 4px 0 rgba(0, 0, 0, 0.5);
     }
