--- a/src/_width_height.scss
+++ b/src/_width_height.scss
@@ -1,15 +1,15 @@
-.lm-h-100 {
+.h-100 {
   height: 100% !important;
 }
 
-.lm-mh-100 {
+.mh-100 {
   max-height: 100% !important;
 }
 
-.lm-w-100 {
+.w-100 {
   width: 100% !important;
 }
 
-.lm-mw-100 {
+.mw-100 {
   max-width: 100% !important;
 }
