--- a/src/_position.scss
+++ b/src/_position.scss
@@ -1,7 +1,7 @@
 .pos-r {
-  position: relative !important;
+  position: relative;
 }
 
 .pos-a {
-  position: absolute !important;
+  position: absolute;
 }
