--- a/src/_typo.scss
+++ b/src/_typo.scss
@@ -9,7 +9,7 @@
 }
 
 .text-muted {
-  color: rgba(0, 0, 0, 0.54) !important;
+  color: rgba(0, 0, 0, 0.54);
 }
 
 .text-strong {
@@ -17,13 +17,13 @@
 }
 
 .text-center {
-  text-align: center !important;
+  text-align: center;
 }
 
 .text-left {
-  text-align: left !important;
+  text-align: left;
 }
 
 .text-right {
-  text-align: right !important;
+  text-align: right;
 }
