--- a/src/variables/index.scss
+++ b/src/variables/index.scss
@@ -1,4 +1,4 @@
 $font-sizes: 12, 14, 16, 18;
 $font-weights: 300, 400, 500;
-$spacing-sizes: 0.25rem, 0.5rem, 1rem, 1.5rem, 3rem;
+$spacing-sizes: 0, 0.25rem, 0.5rem, 1rem, 1.5rem, 3rem;
 $pms: 'padding', 'margin';
