--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,13 @@
 @import './_flex.scss';
 @import './_fonts.scss';
-@import './_container-size.scss';
+@import './_container_size.scss';
 @import './_spacing.scss';
 @import './_btn.scss';
 @import './_animation.scss';
 @import './_typo.scss';
 @import './_width_height.scss';
 @import './_position.scss';
+@import './_border_radiuses.scss';
 
 *,
 *::before,
