--- a/src/variables/index.scss
+++ b/src/variables/index.scss
@@ -1,4 +1,9 @@
-$font-sizes: 12, 14, 16, 18;
-$font-weights: 300, 400, 500;
-$spacing-sizes: 0, 0.25rem, 0.5rem, 1rem, 1.5rem, 3rem;
+@import './_responsive.scss';
+@import './_btn_types.scss';
+@import './_colors.scss';
+@import './_radiuses.scss';
+
+$font-sizes: 12, 14, 16, 18, 20, 22, 26 !default;
+$font-weights: 300, 400, 500 !default;
+$spacing-sizes: 0, 0.25rem, 0.5rem, 1rem, 1.5rem, 3rem !default;
 $pms: 'padding', 'margin';
