--- a/src/_animation.scss
+++ b/src/_animation.scss
@@ -82,3 +82,19 @@
     transition: all 0s;
   }
 }
+
+/** SPINNER ANIM **/
+
+.spinner-anim {
+  animation: spin 0.6s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
