--- a/src/_btn.scss
+++ b/src/_btn.scss
@@ -13,6 +13,11 @@
   padding: 0 24px;
   font-size: inherit;
   font-weight: inherit;
+  margin: 0;
+  width: auto;
+  overflow: visible;
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
 
   &:hover,
   &:focus {
@@ -20,16 +25,33 @@
     box-shadow: 0 0 0 0.2rem rgba($primary-color, 0.5);
   }
 
+  &-rounded {
+    border-radius: 42px;
+  }
+
   &-sm {
     height: 36px;
     line-height: 36px;
     padding: 0 16px;
+
+    &.btn-rounded {
+      border-radius: 36px;
+    }
   }
 
   &-lg {
     height: 48px;
     line-height: 48px;
     padding: 0 32px;
+
+    &.btn-rounded {
+      border-radius: 48px;
+    }
+  }
+
+  &-disabled,
+  &:disabled {
+    background-color: $grey-color;
   }
 }
 
