--- a/src/_flex.scss
+++ b/src/_flex.scss
@@ -18,7 +18,7 @@
 }
 
 .flex {
-  display: flex;
+  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 
 .flex-start {
@@ -73,7 +73,32 @@
 }
 
 .flex-1 {
-  flex: 1;
+  flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+}
+
+.flex-100 {
+  flex: 3 1 100%;
+  order: 1;
+}
+
+.flex-75 {
+  flex: 2 1 75%;
+  order: 2;
+}
+
+.flex-50 {
+  flex: 2 1 50%;
+  order: 2;
+}
+
+.flex-33 {
+  flex: 2 1 33%;
+  order: 2;
+}
+
+.flex-25 {
+  flex: 2 1 25%;
+  order: 1;
 }
 
 .flex-wrap {
