(feature) add label, dot, link, bg-colors, titles

--- a/src/_border_radiuses.scss
+++ b/src/_border_radiuses.scss
@@ -1,6 +1,6 @@
 @import './variables/_radiuses.scss';
 
-@each $size, $value in $border-radiuses {
+@each $size, $value in $radiuses {
   .br-#{$size} {
     border-radius: #{$value};
   }
