--- a/src/_bg_colors.scss
+++ b/src/_bg_colors.scss
@@ -2,3 +2,11 @@
 .bg-white {
   background-color: white;
 }
+
+.bg-grey {
+  background-color: #F2F2F2;
+}
+
+.bg-black {
+  background-color: #000;
+}
