--- a/src/_btn.scss
+++ b/src/_btn.scss
@@ -7,11 +7,11 @@
   background-color: $primary-color;
   color: white;
   display: inline-block;
-  border-radius: 4px;
+  border-radius: 8px;
   height: 42px;
-  line-height: 42px;
+  line-height: normal;
   padding: 0 24px;
-  font-size: inherit;
+  font-size: 16px;
   font-weight: inherit;
   margin: 0;
   width: auto;
@@ -31,8 +31,8 @@
 
   &-sm {
     height: 36px;
-    line-height: 36px;
     padding: 0 16px;
+    font-size: 14px;
 
     &.btn-rounded {
       border-radius: 36px;
@@ -41,7 +41,6 @@
 
   &-lg {
     height: 48px;
-    line-height: 48px;
     padding: 0 32px;
 
     &.btn-rounded {
@@ -55,9 +54,9 @@
   }
 }
 
-@import './variables/_btn_types.scss';
+@import './variables/color_types.scss';
 
-@each $name, $color in $btn_types {
+@each $name, $color in $color_types {
   @if (type-of($color) == 'color') {
     .btn-#{$name} {
       background-color: $color;
