--- a/src/variables/_colors.scss
+++ b/src/variables/_colors.scss
@@ -6,6 +6,9 @@ $info-color:      #17A2B8 !default;
 $warning-color:   #FFA300 !default;
 $light-color:     #F5F5F5 !default;
 $dark-color:      #24292E !default;
+$default-color:      #CCC !default;
+$black-color:      #000 !default;
+$white-color:      #FFF !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 30%) !default;
