--- a/src/variables/index.scss
+++ b/src/variables/index.scss
@@ -1,5 +1,5 @@
 @import './_responsive.scss';
-@import './_btn_types.scss';
+@import './_color_types.scss';
 @import './_colors.scss';
 @import './_radiuses.scss';
 
