--- a/src/_bg_colors.scss
+++ b/src/_bg_colors.scss
@@ -10,3 +10,13 @@
 .bg-black {
   background-color: #000;
 }
+
+@import './variables/_color_types.scss';
+
+@each $name, $color in $color_types {
+  @if (type-of($color) == 'color') {
+    .bg-#{$name} {
+      background-color: $color;
+    }
+  }
+}
