--- a/src/_btn.scss
+++ b/src/_btn.scss
@@ -54,7 +54,7 @@
   }
 }
 
-@import './variables/color_types.scss';
+@import './variables/_color_types.scss';
 
 @each $name, $color in $color_types {
   @if (type-of($color) == 'color') {
