--- a/src/_dot.scss
+++ b/src/_dot.scss
@@ -1,5 +1,5 @@
-@import './variables/color_types.scss';
-@import './variables/colors.scss';
+@import './variables/_colors.scss';
+@import './variables/_color_types.scss';
 
 $dot-size: 6px;
 
