--- a/src/_label.scss
+++ b/src/_label.scss
@@ -1,5 +1,5 @@
-@import './variables/colors.scss';
-@import './variables/color_types.scss';
+@import './variables/_colors.scss';
+@import './variables/_color_types.scss';
 
 .label {
   border-radius: 2px;
