--- a/src/variables/_color_types.scss
+++ b/src/variables/_color_types.scss
@@ -6,6 +6,7 @@ $color_types: (
   success: $success-color,
   danger: $danger-color,
   grey: $grey-color,
+  grey-light: $grey-color-light,
   info: $info-color,
   warning: $warning-color,
   light: $light-color,
