:building_construction: Build 0.2.5

--- a/src/_typo.scss
+++ b/src/_typo.scss
@@ -31,3 +31,13 @@
 .text-right {
   text-align: right;
 }
+
+@import './variables/_color_types.scss';
+
+@each $name, $color in $color_types {
+  @if (type-of($color) == 'color') {
+    .text-#{$name} {
+      color: $color;
+    }
+  }
+}
