(feature) Add badge

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 @import './_label.scss';
 @import './_dot.scss';
 @import './_link.scss';
+@import './_badge.scss';
 @import './_animation.scss';
 @import './_position.scss';
 @import './_flex.scss';
