--- a/src/_bg_colors.scss
+++ b/src/_bg_colors.scss
@@ -11,7 +11,7 @@
   background-color: #000;
 }
 
-@import './variables/_color_types.scss';
+@import './variables/_color_types';
 
 @each $name, $color in $color_types {
   @if (type-of($color) == 'color') {
