--- a/src/_width_height.scss
+++ b/src/_width_height.scss
@@ -13,3 +13,19 @@
 .mw-100 {
   max-width: 100%;
 }
+
+.m-h-0 {
+  min-height: 0;
+}
+
+.m-h-100 {
+  min-height: 100%;
+}
+
+.m-w-0 {
+  min-width: 0;
+}
+
+.m-w-100 {
+  min-width: 100%;
+}
