--- a/src/_badge.scss
+++ b/src/_badge.scss
@@ -1,8 +1,8 @@
-@import './variables/_colors.scss';
-@import './variables/_color_types.scss';
+@import './variables/_colors';
+@import './variables/_color_types';
 
 .badge {
-  background: $grey-color-light;
+  background: $grey-color;
   height: 22px;
   line-height: 22px;
   border-radius: 22px;
