--- a/src/_btn.scss
+++ b/src/_btn.scss
@@ -1,19 +1,24 @@
+$default-size: 40px;
+$medium-size: 36px;
+$small-size: 32px;
+$mini-size: 30px;
+
 .btn {
   border: 1px solid transparent;
-  text-decoration: none;
   outline: none;
   cursor: pointer;
   transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
   background-color: $primary-color;
   color: white;
   display: inline-block;
-  border-radius: 8px;
-  height: 42px;
-  line-height: normal;
-  padding: 0 24px;
-  font-size: 16px;
+  border-radius: $border-radius;
+  line-height: 1;
+  box-sizing: border-box;
+  padding: 12px 20px;
+  font-size: 14px;
   font-weight: inherit;
   margin: 0;
+  user-select: none;
   width: auto;
   overflow: visible;
   -webkit-font-smoothing: inherit;
@@ -22,49 +27,61 @@
   &:hover,
   &:focus {
     background-color: darken($primary-color, 10%);
+  }
+
+  &:focus {
     box-shadow: 0 0 0 0.2rem rgba($primary-color, 0.5);
   }
 
-  &-rounded {
-    border-radius: 42px;
+  &--rounded {
+    border-radius: 20px;
   }
 
-  &-sm {
-    height: 36px;
-    padding: 0 16px;
+  &--md {
+    padding: 10px 20px;
     font-size: 14px;
+  }
 
-    &.btn-rounded {
-      border-radius: 36px;
+  &--sm {
+    padding: 9px 15px;
+    font-size: 12px;
+  }
+
+  &--mini {
+    padding: 7px 15px;
+    font-size: 12px;
+  }
+
+  &--fab {
+    border-radius: 50%;
+    padding: 0;
+    height: 40px;
+    width: 40px;
+
+    &.btn--md {
+      height: 36px;
+      width: 36px;
+    }
+
+    &.btn--sm {
+      height: 32px;
+      width: 32px;
+    }
+
+    &.btn--mini {
+      height: 28px;
+      width: 28px;
     }
   }
 
-  &-lg {
-    height: 48px;
-    padding: 0 32px;
-
-    &.btn-rounded {
-      border-radius: 48px;
-    }
-  }
-
-  &-disabled,
-  &:disabled {
-    background-color: $grey-color;
+  &--white,
+  &--light {
+    color: $secondary-color;
   }
 }
 
 a.btn {
   text-decoration: none;
-  line-height: 42px;
-
-  &-sm {
-    line-height: 36px;
-  }
-
-  &-lg {
-    line-height: 48px;
-  }
 
   &:hover,
   &:focus {
@@ -72,30 +89,49 @@ a.btn {
   }
 }
 
-@import './variables/_color_types.scss';
+@import './variables/_color_types';
 
 @each $name, $color in $color_types {
   @if (type-of($color) == 'color') {
-    .btn-#{$name} {
+    .btn--#{$name} {
       background-color: $color;
 
       &:hover,
       &:focus {
         background-color: darken($color, 10%);
+      }
+
+      &:focus {
         box-shadow: 0 0 0 0.2rem rgba($color, 0.5);
       }
 
-      &-outline {
-        background-color: transparent;
+      &--outline {
+        background-color: rgba($color, 0.05);
         border: 1px solid $color;
         color: $color;
 
         &:hover,
         &:focus {
-          background-color: transparent;
+          background-color: $color;
+          color: white;
+        }
+
+        &:focus {
           box-shadow: 0 0 0 0.2rem rgba($color, 0.5);
         }
       }
     }
   }
+}
+
+.btn--default--outline {
+  color: $secondary-color;
+}
+
+.btn--disabled:disabled {
+  box-shadow: none;
+  background-color: $disabled-color;
+  border: 1px solid $disabled-color;
+  color: white;
+  cursor: not-allowed;
 }
