--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,23 @@
-@import './_bg_colors.scss';
-@import './_label.scss';
-@import './_dot.scss';
-@import './_link.scss';
-@import './_btn.scss';
-@import './_badge.scss';
-@import './_animation.scss';
-@import './_position.scss';
-@import './_flex.scss';
-@import './_typo.scss';
-@import './_container_size.scss';
-@import './_spacing.scss';
-@import './_width_height.scss';
-@import './_border_radiuses.scss';
-@import './_fonts.scss';
+@import './mixins/index';
+@import './variables/index';
+@import './_bg_colors';
+@import './_label';
+@import './_dot';
+@import './_link';
+@import './_btn';
+@import './_badge';
+@import './_table';
+@import './_animation';
+@import './_overflow';
+@import './_position';
+@import './_flex';
+@import './_typo';
+@import './_container_size';
+@import './_spacing';
+@import './_width_height';
+@import './_border_radiuses';
+@import './_fonts';
+@import './_responsive';
 
 *,
 *::before,
@@ -38,4 +43,28 @@ ul,
 figure {
   margin: 0;
   padding: 0;
+}
+
+html,
+body,
+#app {
+  font: $base-font-weight $base-font-size $base-font-family;
+  line-height: $base-line-height;
+  font-kerning: normal;
+  height: 100%;
+  color: $text-color;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 400;
+}
+
+h1,
+h2 {
+  color: $primary-color;
 }
