--- a/src/_label.scss
+++ b/src/_label.scss
@@ -4,8 +4,8 @@
 .label {
   border-radius: 2px;
   padding: 2px 4px;
-  color: #FFF;
-  font-size: 10px;
+  color: white;
+  font-size: .714em;
   background-color: $primary-color;
 }
 
