--- a/src/_table.scss
+++ b/src/_table.scss
@@ -9,8 +9,8 @@ table.md {
   word-break: break-all;
   margin-top: 0;
   margin-bottom: 16px;
-  font-size: 14px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  font-size: 1em;
+  box-shadow: 0 0 8px rgba(0, 0, 0, .2);
 
   tr {
     background-color: $bg-color;
