--- a/src/mixins/_multiLineEllipsis.scss
+++ b/src/mixins/_multiLineEllipsis.scss
@@ -20,7 +20,7 @@
     right: 0;
     width: 1em;
     height: 1em;
-    margin-top: 0.2em;
+    margin-top: .2em;
     background: $bgColor;
   }
 }
