--- a/src/_animation.scss
+++ b/src/_animation.scss
@@ -3,7 +3,7 @@
 .slide-leave-active {
   opacity: 1;
   z-index: 998;
-  transition: all 0.3s;
+  transition: all .3s;
   transform: translateY(0);
 }
 
@@ -15,11 +15,26 @@
 }
 
 /** Slide animation **/
+.tags-enter-active,
+.tags-leave-active {
+  opacity: 1;
+  transition: all .3s;
+  position: absolute;
+  transform: translateY(0);
+}
+
+.tags-enter,
+.tags-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+/** Slide animation **/
 .slideinvert-enter-active,
 .slideinvert-leave-active {
   opacity: 1;
   z-index: 998;
-  transition: all 0.3s;
+  transition: all .3s;
   transform: translateY(0);
 }
 
@@ -36,7 +51,7 @@
 .slideprev-leave-active,
 .slideprev-enter-active {
   position: absolute;
-  transition: all 0.3s;
+  transition: all .3s;
 }
 
 .slidenext-enter,
@@ -55,7 +70,7 @@
 .slidevprev-leave-active,
 .slidevprev-enter-active {
   position: absolute;
-  transition: all 0.3s;
+  transition: all .3s;
 }
 
 .slidevnext-enter,
@@ -86,7 +101,7 @@
 /** SPINNER ANIM **/
 
 .spinner-anim {
-  animation: spin 0.6s linear infinite;
+  animation: spin .6s linear infinite;
 }
 
 @-webkit-keyframes spin {
@@ -97,4 +112,96 @@
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+.dialog-fade-enter-active .dialog-animation {
+  animation: dialog-fade-in .4s;
+}
+
+.dialog-fade-leave-active .dialog-animation {
+  animation: dialog-fade-out .4s;
+}
+
+@keyframes dialog-fade-in {
+  0% {
+    transform: translate3d(0, -30px, 0);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+@keyframes dialog-fade-out {
+  0% {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translate3d(0, -30px, 0);
+    opacity: 0;
+  }
+}
+
+.expand-enter-active,
+.expand-leave-active {
+  transition: 300ms ease-in-out;
+  transition-property: opacity, height;
+  overflow: hidden;
+}
+
+.expand-enter,
+.expand-leave-to {
+  height: 0;
+  opacity: 0;
+}
+
+.scale-enter-active,
+.scale-leave-active {
+  opacity: 1;
+  z-index: 1;
+  transition: all 300ms cubic-bezier(.4, .52, .26, .9);
+}
+
+.scale-enter,
+.scale-leave-to {
+  opacity: .4;
+  z-index: 1;
+  transform: scale(0);
+}
+
+// loader input bar anim
+
+@keyframes loading {
+  from {
+    left: -200px;
+    width: 30%;
+  }
+
+  50% {
+    width: 30%;
+  }
+
+  70% {
+    width: 70%;
+  }
+
+  80% {
+    left: 50%;
+  }
+
+  95% {
+    left: 120%;
+  }
+
+  to {
+    left: 100%;
+  }
+}
+
+.flip-list-move {
+  transition: transform .6s;
 }
