--- a/src/_badge.scss
+++ b/src/_badge.scss
@@ -7,7 +7,7 @@
   line-height: 22px;
   border-radius: 22px;
   padding: 0 5px;
-  font-size: 12px;
+  font-size: .857em;
   color: #888;
   font-weight: 500;
 }
@@ -16,7 +16,7 @@
   @if (type-of($color) == 'color') {
     .badge-#{$name} {
       background-color: $color;
-      color: #FFF;
+      color: white;
     }
   }
 }
