--- a/src/_btn.scss
+++ b/src/_btn.scss
@@ -1,3 +1,4 @@
+$large-size: 44px;
 $default-size: 40px;
 $medium-size: 36px;
 $small-size: 32px;
@@ -7,7 +8,7 @@ $mini-size: 30px;
   border: 1px solid transparent;
   outline: none;
   cursor: pointer;
-  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all .25s cubic-bezier(.645, .045, .355, 1);
   background-color: $primary-color;
   color: white;
   display: inline-block;
@@ -15,13 +16,14 @@ $mini-size: 30px;
   line-height: 1;
   box-sizing: border-box;
   padding: 12px 20px;
-  font-size: 14px;
+  font-size: 1em;
   font-weight: inherit;
   margin: 0;
   user-select: none;
   width: auto;
   overflow: visible;
   -webkit-font-smoothing: inherit;
+  text-decoration: none;
   -moz-osx-font-smoothing: inherit;
 
   &:hover,
@@ -29,27 +31,47 @@ $mini-size: 30px;
     background-color: darken($primary-color, 10%);
   }
 
-  &:focus {
-    box-shadow: 0 0 0 0.2rem rgba($primary-color, 0.5);
+  &.active {
+    background-color: $primary-color;
+  }
+
+  &:focus,
+  &.active {
+    box-shadow: 0 0 0 .143rem rgba($primary-color, .5);
+  }
+
+  &:hover,
+  &:focus,
+  &.active {
+    text-decoration: none;
   }
 
   &--rounded {
-    border-radius: 20px;
+    border-radius: 50px;
+  }
+
+  &--block {
+    width: 100%;
+  }
+
+  &--lg {
+    padding: 16px 22px;
+    font-size: 1.143em;
   }
 
   &--md {
     padding: 10px 20px;
-    font-size: 14px;
+    font-size: 1em;
   }
 
   &--sm {
     padding: 9px 15px;
-    font-size: 12px;
+    font-size: .857em;
   }
 
   &--mini {
     padding: 7px 15px;
-    font-size: 12px;
+    font-size: .857em;
   }
 
   &--fab {
@@ -57,6 +79,11 @@ $mini-size: 30px;
     padding: 0;
     height: 40px;
     width: 40px;
+
+    &.btn--lg {
+      height: 50px;
+      width: 50px;
+    }
 
     &.btn--md {
       height: 36px;
@@ -80,15 +107,6 @@ $mini-size: 30px;
   }
 }
 
-a.btn {
-  text-decoration: none;
-
-  &:hover,
-  &:focus {
-    text-decoration: none;
-  }
-}
-
 @import './variables/_color_types';
 
 @each $name, $color in $color_types {
@@ -101,23 +119,30 @@ a.btn {
         background-color: darken($color, 10%);
       }
 
-      &:focus {
-        box-shadow: 0 0 0 0.2rem rgba($color, 0.5);
+      &.active {
+        background-color: $color;
+      }
+
+      &:focus,
+      &.active {
+        box-shadow: 0 0 0 .143rem rgba($color, .5);
       }
 
       &--outline {
-        background-color: rgba($color, 0.05);
+        background-color: rgba($color, .05);
         border: 1px solid $color;
         color: $color;
 
         &:hover,
-        &:focus {
+        &:focus,
+        &.active {
           background-color: $color;
           color: white;
         }
 
-        &:focus {
-          box-shadow: 0 0 0 0.2rem rgba($color, 0.5);
+        &:focus,
+        &.active {
+          box-shadow: 0 0 0 .143rem rgba($color, .5);
         }
       }
     }
