--- a/src/variables/_color_types.scss
+++ b/src/variables/_color_types.scss
@@ -3,10 +3,10 @@
 $color_types: (
   'primary': $primary-color,
   'secondary': $secondary-color,
+  'third': $third-color,
   'success': $success-color,
   'danger': $danger-color,
   'grey': $grey-color,
-  'grey-light': $grey-color,
   'info': $info-color,
   'warning': $warning-color,
   'light': $light-color,
