--- a/src/variables/_spacing.scss
+++ b/src/variables/_spacing.scss
@@ -1,2 +1,2 @@
-$spacing-sizes: 0, 0.25rem, 0.5rem, 1rem, 1.5rem, 3rem !default;
+$spacing-sizes: 0, .25rem, .5rem, 1rem, 1.5rem, 3rem !default;
 $pms: 'padding', 'margin';
