--- a/src/variables/index.scss
+++ b/src/variables/index.scss
@@ -6,4 +6,4 @@
 @import './_typo';
 @import './_spacing';
 
-$spacing-sizes: 0, 0.25rem, 0.5rem, 1rem, 1.5rem, 3rem !default;
+$spacing-sizes: 0, .25rem, .5rem, 1rem, 1.5rem, 3rem !default;
